Fixed welcome alignment

--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -1,6 +1,7 @@
 .c-greeting {
 	opacity: .15;
 	height: 90vh;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
   	justify-content: center;
